[package]
name = "twitch_app_api"
version = "0.1.3"
authors = ["Protowalker <jacksonedwards6@gmail.com>"]
license = "GPL-2.0+"
readme = "README.md"
keywords = ["twitch", "rest", "curse", "curseforge", "minecraft"]
description =  "An UNFINISHED implementation of the Twitch App API"
repository = "https://github.com/Protowalker/TwitchAppAPI-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.10.8", features=["blocking", "json"]}
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.2.1"
